Add help filter url

--- a/views/help/index.tmpl
+++ b/views/help/index.tmpl
@@ -1,6 +1,6 @@
 <div class="qor-page__body">
-  <div>
-    <select>
+  <div data-help-filter-url="/admin/!help">
+    <select name="category">
       <option>category filter</option>
     </select>
 
