Only have help entry

--- a/views/help/index.tmpl
+++ b/views/help/index.tmpl
@@ -1,3 +1,4 @@
+{{$resource := .Resource}}
 <div class="qor-page__body">
   <div data-help-filter-url="/admin/!help">
     <select name="category">
@@ -24,7 +25,7 @@
       <a href="/admin/users/1" data-url="/admin/users/1" data-open-type="slideout">User 1</a>
     </div>
 
-    <a class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--new" href="/admin/!help/new" data-url="/admin/!help/new">
+    <a class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--new" href="{{new_resource_path $resource}}" data-url="{{new_resource_path $resource}}">
       <i class="material-icons">add</i>
     </a>
   {{end}}
