--- a/views/themes/help/assets/stylesheets/help.css
+++ b/views/themes/help/assets/stylesheets/help.css
@@ -1,3 +1,1 @@
-body {
-  color: red;
-}
+.qor-help__header{background-color:#fff;box-shadow:0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 3px 5px 0 rgba(0,0,0,.12);margin:-16px -24px 24px;padding:4px 24px}.qor-help__header .mdl-textfield{padding:0}.qor-help__header .mdl-textfield__label:after{bottom:0}.qor-help__lists{padding-left:0}.qor-help__lists li{list-style:none;margin:8px 0}.qor-help__lists li a{text-decoration:none}
