--- a/views/themes/help/index.tmpl
+++ b/views/themes/help/index.tmpl
@@ -7,11 +7,11 @@
 <div class="qor-page__body">
     <div data-toggle="qor.help">
 
-        <div data-help-filter-url="{{url_for $resource}}" class="qor-help__header">
+        <div class="qor-help__header">
             <div class="qor-form-section-rows qor-section-columns-2 clearfix">
                 <div class="qor-field">
                     <div class="mdl-textfield mdl-js-textfield">
-                        <select name="category" data-toggle="qor.chooser" chooser-selected="true" placeholder="category filter">
+                        <select name="category" class="qor-help__search-category" data-toggle="qor.chooser" chooser-selected="true" placeholder="category filter">
                           <option value="1">category1</option>
                           <option value="2">category2</option>
                           <option value="3">category3</option>
@@ -21,7 +21,7 @@
 
                 <div class="qor-field">
                     <div class="mdl-textfield mdl-js-textfield">
-                        <input class="mdl-textfield__input qor-search__input" type="text" id="inputSearch" name="keyword" value="" placeholder="{{t " qor_admin.actions.search_bar_search " "Search "}}">
+                        <input class="mdl-textfield__input qor-help__search" type="text" id="inputSearch" name="keyword" data-help-filter-url="{{url_for $resource}}" value="" placeholder="{{t " qor_admin.actions.search_bar_search " "Search "}}">
                         <label class="mdl-textfield__label" for="inputSearch"></label>
                     </div>
                 </div>
