--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -3,8 +3,17 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 3px 5px 0 rgba(0, 0, 0, .12);
     margin: -16px -24px 24px;
     padding: 4px 24px;
+    .qor-field {
+        padding-right: 16px;
+        float: left;
+        .qor-help__search {
+            margin-top: 6px;
+        }
+    }
     .mdl-textfield {
         padding: 0;
+        width: 100%;
+        min-width: 180px;
     }
     .mdl-textfield__label:after {
         bottom: 0;
@@ -18,6 +27,25 @@
         margin: 8px 0;
         a {
             text-decoration: none;
+        }
+    }
+    .qor-doc__preview {
+        position: relative;
+        padding: 24px !important;
+        background-color: #fafafa !important;
+        .mdl-button--fab {
+            position: absolute;
+            right: 0;
+            bottom: auto;
+            top: -50px;
+            font-size: 24px;
+            height: 32px;
+            min-width: 32px;
+            width: 32px;
+            box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, .12), 0 1px 1px 0 rgba(0, 0, 0, .24);
+        }
+        .qor-button--edit {
+            right: 48px;
         }
     }
 }
