feat(help) add help list and search func@3

--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -20,6 +20,13 @@
     }
 }
 
+.qor-help__show {
+    h5 {
+        margin-top: 0;
+        margin-bottom: 24px;
+    }
+}
+
 .qor-help__lists {
     padding-left: 0;
     li {
