--- a/views/themes/help/show.tmpl
+++ b/views/themes/help/show.tmpl
@@ -9,14 +9,16 @@
   {{render "shared/flashes"}}
   {{render "shared/errors"}}
 
-  <div class="qor-form-container">
+  <div class="qor-form-container qor-help__show">
     {{if has_update_permission .Resource}}
-      <a href="{{join_url (url_for .Result .Resource) "edit"}}" class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--edit" data-url="{{join_url (url_for .Result .Resource) "edit"}}">
+      <a href="{{join_url (url_for .Result .Resource) "edit"}}" class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--edit" data-open-type="slideout" data-url="{{join_url (url_for .Result .Resource) "edit"}}">
         <i class="material-icons">edit</i>
       </a>
     {{end}}
 
-    {{raw .Result.Body}}
+     <h5>{{raw .Result.Title}}</h5>
+
+    <div>{{raw .Result.Body}}</div>
   </div>
 </div>
 
