--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -3,6 +3,9 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 3px 5px 0 rgba(0, 0, 0, .12);
     margin: -16px -24px 24px;
     padding: 4px 24px;
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+        font-size: 14px;
+    }
     .qor-field {
         padding-right: 16px;
         float: left;
@@ -29,9 +32,26 @@
 
 .qor-help__lists {
     padding-left: 0;
+    .qor-help__lists-tags {
+        margin-left: 8px;
+        span {
+            display: inline-block;
+            vertical-align: middle;
+            background-color: rgba(0, 0, 0, .12);
+            line-height: 1;
+            border-radius: 2px;
+            padding: 2px 4px;
+            font-size: 12px;
+        }
+    }
     li {
         list-style: none;
         margin: 8px 0;
+        >a {
+            font-size: 16px;
+            display: inline-block;
+            vertical-align: middle;
+        }
         a {
             text-decoration: none;
         }
@@ -39,6 +59,7 @@
     .qor-doc__preview {
         position: relative;
         padding: 24px !important;
+        margin-top: 72px !important;
         background-color: #fafafa !important;
         .mdl-button--fab {
             position: absolute;
