--- a/views/themes/help/index.tmpl
+++ b/views/themes/help/index.tmpl
@@ -35,8 +35,9 @@
         <li>
           <a href="{{url_for $result $resource}}" data-inline-url="{{url_for $result $resource}}">{{$result.Title}}</a>
           <span class="qor-help__lists-tags">
-            <span>category1</span>
-            <span>category2</span>
+            {{range $category := $result.Categories.Categories}}
+              <span>{{t (print "qor_help.categories." $category)}}</span>
+            {{end}}
           </span>
         </li>
       {{end}}
