--- a/views/actions/header/9.help.tmpl
+++ b/views/actions/header/9.help.tmpl
@@ -1,4 +1,4 @@
-{{$help_url := (join_url .Admin.GetRouter.Prefix "!help")}}
+{{$help_url := (patch_url (join_url .Admin.GetRouter.Prefix "!help") "category" (get_current_help_category .Resource .))}}
 <label class="mdl-button mdl-js-button mdl-button--icon qor-notifications__badges" data-url="{{$help_url}}" data-open-type="slideout">
   <i class="material-icons">help</i>
 </label>
