--- a/views/themes/help/index.tmpl
+++ b/views/themes/help/index.tmpl
@@ -13,9 +13,9 @@
       <div class="qor-field">
         <div class="mdl-textfield mdl-js-textfield">
           <select name="category" class="qor-help__search-category" data-toggle="qor.chooser" chooser-selected="true" placeholder="category filter">
-            <option value="1">category1</option>
-            <option value="2">category2</option>
-            <option value="3">category3</option>
+            {{range $category := (get_help_categories .)}}
+              <option value="{{index $category 0}}" {{if (eq $current_category (index $category 0))}}SELECTED{{end}}>{{index $category 1}}</option>
+            {{end}}
           </select>
         </div>
       </div>
