--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -35,20 +35,23 @@
     .qor-help__lists-tags {
         margin-left: 8px;
         span {
+            cursor: pointer;
             display: inline-block;
             vertical-align: middle;
             background-color: rgba(0, 0, 0, .12);
             line-height: 1;
             border-radius: 2px;
-            padding: 2px 4px;
+            padding: 2px 6px;
             font-size: 12px;
+            font-weight: 400;
         }
     }
     li {
         list-style: none;
-        margin: 8px 0;
+        padding: 4px 16px 4px 0;
         >a {
             font-size: 16px;
+            font-weight: 400;
             display: inline-block;
             vertical-align: middle;
         }
