--- a/views/themes/help/index.tmpl
+++ b/views/themes/help/index.tmpl
@@ -34,28 +34,37 @@
       </div>
     </div>
 
-    {{render "shared/flashes"}}
-    {{render "shared/errors"}}
+    <div class="qor-help__body">
+      {{render "shared/flashes"}}
+      {{render "shared/errors"}}
 
-    <ul class="qor-help__lists">
-      {{range $result := .Result}}
-        <li>
-          <a href="{{url_for $result $resource}}" data-inline-url="{{url_for $result $resource}}">{{$result.Title}}</a>
-          <span class="qor-help__lists-tags">
-            {{range $category := $result.Categories.Categories}}
-              <span>{{t (print "qor_help.categories." $category)}}</span>
-            {{end}}
-          </span>
-        </li>
+      {{if len .Result}}
+        <ul class="qor-help__lists">
+          {{range $result := .Result}}
+            <li>
+              <a href="{{url_for $result $resource}}" data-inline-url="{{url_for $result $resource}}">{{$result.Title}}</a>
+              <span class="qor-help__lists-tags">
+                {{range $category := $result.Categories.Categories}}
+                  <span data-url="{{patch_url (url_for $resource) "category" $category}}" data-open-type="slideout">{{t (print "qor_help.categories." $category)}}</span>
+                {{end}}
+              </span>
+            </li>
+          {{end}}
+        </ul>
+
+        {{render "index/pagination"}}
+      {{else}}
+        <h2 class="qor-page__tips">
+          {{t "qor_help.no_document_for" "No document for {{$1}}" (t (print "qor_help.categories." $current_category))}}<br>
+          <a href="#" data-url="{{url_for $resource}}" data-open-type="slideout">{{t "qor_help.check_all_documents" "Check All Documents"}}</a>
+        </h2>
       {{end}}
-    </ul>
 
-    {{render "index/pagination"}}
-
-    {{if has_create_permission .Resource}}
-      <a class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--new" href="{{patch_url (new_resource_path .Resource) "category" $current_category}}" data-url="{{patch_url (new_resource_path .Resource) "category" $current_category}}" data-open-type="slideout">
-        <i class="material-icons">add</i>
-      </a>
-    {{end}}
+      {{if has_create_permission .Resource}}
+        <a class="mdl-button mdl-button--fab mdl-button--primary mdl-js-button mdl-js-ripple-effect qor-button--new" href="{{patch_url (new_resource_path .Resource) "category" $current_category}}" data-url="{{patch_url (new_resource_path .Resource) "category" $current_category}}" data-open-type="slideout">
+          <i class="material-icons">add</i>
+        </a>
+      {{end}}
+    </div>
   </div>
 </div>
