--- a/views/actions/header/9.help.tmpl
+++ b/views/actions/header/9.help.tmpl
@@ -1,6 +1,4 @@
 {{$help_url := (patch_url (join_url .Admin.GetRouter.Prefix "!help") "category" (get_current_help_category .Resource .))}}
-{{$help_documents_count := (get_help_documents_count .Resource .)}}
 <label class="mdl-button mdl-js-button mdl-button--icon qor-notifications__badges" data-url="{{$help_url}}" data-open-type="slideout">
-  {{if $help_documents_count}}<span class="qor-icon__unread_count">{{$help_documents_count}}</span>{{end}}
-  <i class="material-icons">help</i>
+  <i class="material-icons" {{if not (has_help_documents .Resource .)}}style="color:#67ADD7"{{end}}>help</i>
 </label>
