Change help show page style

--- a/views/themes/help/index.tmpl
+++ b/views/themes/help/index.tmpl
@@ -35,6 +35,7 @@
     </div>
 
     <div class="qor-help__body">
+      <div class="qor-help__index">
       {{render "shared/flashes"}}
       {{render "shared/errors"}}
 
