--- a/views/themes/help/assets/stylesheets/help/help.scss
+++ b/views/themes/help/assets/stylesheets/help/help.scss
@@ -1,11 +1,3 @@
-.qor-slideout__header {
-    .qor-doc__close {
-        color: #fff;
-        vertical-align: middle;
-        padding-right: 0.5em;
-    }
-}
-
 .qor-help__header {
     background-color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 3px 5px 0 rgba(0, 0, 0, .12);
@@ -85,6 +77,27 @@
         }
         .qor-button--edit {
             right: 48px;
+        }
+    }
+}
+
+.qor-slideout__show_title {
+    span {
+        padding: 0 16px;
+        max-width: 75%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    a,
+    span {
+        display: inline-block;
+        vertical-align: middle;
+        color: #fff;
+        height: 64px;
+        line-height: 64px;
+        i {
+            margin-top: 20px;
         }
     }
 }
