rename redactor style className

--- a/views/themes/help/show.tmpl
+++ b/views/themes/help/show.tmpl
@@ -9,7 +9,7 @@
   {{render "shared/flashes"}}
   {{render "shared/errors"}}
 
-  <div class="qor-form-container redactor-editor qor-help__show">
+  <div class="qor-form-container redactor-styles qor-help__show">
     <h5 class="qor-help__document_title">{{raw .Result.Title}}</h5>
     <div>{{raw .Result.Body}}</div>
 
@@ -20,4 +20,3 @@
     {{end}}
   </div>
 </div>
-
